// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Update tsconfig.json for Angular 21 migration compilerOptions updates should not update module if it is already "preserve" 1`] = `
{
  "compileOnSave": false,
  "compilerOptions": {
    "module": "preserve",
    "target": "ES2022",
  },
  "files": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`Update tsconfig.json for Angular 21 migration compilerOptions updates should remove outDir, esModuleInterop, and moduleResolution 1`] = `
{
  "angularCompilerOptions": {
    "enableI18nLegacyMessageIdFormat": false,
    "strictInjectionParameters": true,
  },
  "compileOnSave": false,
  "compilerOptions": {
    "module": "preserve",
    "noImplicitOverride": true,
    "strict": true,
    "target": "ES2022",
  },
  "files": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`Update tsconfig.json for Angular 21 migration compilerOptions updates should update module to "preserve" 1`] = `
{
  "compileOnSave": false,
  "compilerOptions": {
    "module": "preserve",
    "target": "ES2022",
  },
  "files": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`Update tsconfig.json for Angular 21 migration edge cases should apply all transformations in a single migration 1`] = `
{
  "angularCompilerOptions": {
    "enableI18nLegacyMessageIdFormat": false,
    "strictInjectionParameters": true,
    "strictInputAccessModifiers": true,
    "strictTemplates": true,
  },
  "compileOnSave": false,
  "compilerOptions": {
    "experimentalDecorators": true,
    "importHelpers": true,
    "isolatedModules": true,
    "module": "preserve",
    "noFallthroughCasesInSwitch": true,
    "noImplicitOverride": true,
    "noImplicitReturns": true,
    "noPropertyAccessFromIndexSignature": true,
    "skipLibCheck": true,
    "strict": true,
    "target": "ES2022",
  },
  "files": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`Update tsconfig.json for Angular 21 migration edge cases should handle tsconfig.json with no compilerOptions 1`] = `
{
  "compileOnSave": false,
  "files": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`Update tsconfig.json for Angular 21 migration files and references additions should add files and references arrays 1`] = `
{
  "angularCompilerOptions": {
    "enableI18nLegacyMessageIdFormat": false,
  },
  "compileOnSave": false,
  "compilerOptions": {
    "module": "preserve",
    "target": "ES2022",
  },
  "files": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`Update tsconfig.json for Angular 21 migration files and references additions should not override existing files and references 1`] = `
{
  "compileOnSave": false,
  "compilerOptions": {
    "module": "preserve",
    "target": "ES2022",
  },
  "files": [
    "src/main.ts",
  ],
  "references": [
    {
      "path": "./custom.json",
    },
  ],
}
`;
